<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.studentinfo.StudentActivity">

    <TextView
        style="@style/TextAppearance.AppCompat.Headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/student_info" />


    <EditText
        android:id="@+id/et_regno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_regno"
        />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        />

    <Spinner
        android:id="@+id/sp_degree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/degree_array"/>

    <Spinner
        android:id="@+id/sp_dept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/dept_array"/>

    <Button
        android:id="@+id/btn_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"></TableLayout>

</LinearLayout>
